changed names of tiles on first three tabs

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>One</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                                <h2 class="tm-figure-title"> <span>Albert</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2008 – present</p>
                                                 <a href="img/tm-img-01.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -92,8 +92,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-02-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Two</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title"> <span>Bailey</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2011 – present</p>
                                                 <a href="img/tm-img-02.jpg">View more</a>
                                             </figcaption>
                                         </figure>
@@ -102,8 +102,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-03-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Three</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                                <h2 class="tm-figure-title"> <span>Jake</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2005 – 2015</p>
                                                 <a href="img/tm-img-03.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -112,8 +112,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-04-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Four</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title"> <span>Sandy</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2007 – present</p>
                                                 <a href="img/tm-img-04.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -259,8 +259,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-12-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>One</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
+                                                <h2 class="tm-figure-title"> <span>Cats</span></h2>
+                                                <p class="tm-figure-description">10 pets</p>
                                                 <a href="img/tm-img-12.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -269,8 +269,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Two</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title"> <span>Dogs</span></h2>
+                                                <p class="tm-figure-description">5 pets</p>
                                                 <a href="img/tm-img-11.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -279,8 +279,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-10-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Three</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
+                                                <h2 class="tm-figure-title"> <span>Ferrets</span></h2>
+                                                <p class="tm-figure-description">4 pets</p>
                                                 <a href="img/tm-img-10.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -289,8 +289,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-09-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Four</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title"> <span>Reptiles</span></h2>
+                                                <p class="tm-figure-description">12 pets</p>
                                                 <a href="img/tm-img-09.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -397,8 +397,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>One</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
+                                                <h2 class="tm-figure-title"> <span>1999</span></h2>
+                                                <p class="tm-figure-description">15 pets</p>
                                                 <a href="img/tm-img-01.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -407,8 +407,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-06-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Two</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title"> <span>2000</span></h2>
+                                                <p class="tm-figure-description">17 pets</p>
                                                 <a href="img/tm-img-06.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -417,8 +417,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-13-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Three</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
+                                                <h2 class="tm-figure-title"> <span>2001</span></h2>
+                                                <p class="tm-figure-description">18 pets</p>
                                                 <a href="img/tm-img-13.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -427,8 +427,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-12-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Four</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title"> <span>2002</span></h2>
+                                                <p class="tm-figure-description">20 pets</p>
                                                 <a href="img/tm-img-12.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -437,8 +437,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-05-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Five</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
+                                                <h2 class="tm-figure-title"> <span>2003</span></h2>
+                                                <p class="tm-figure-description">18 pets</p>
                                                 <a href="img/tm-img-05.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -447,8 +447,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-09-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Six</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title"> <span>2004</span></h2>
+                                                <p class="tm-figure-description">16 pets</p>
                                                 <a href="img/tm-img-09.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -457,8 +457,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
+                                                <h2 class="tm-figure-title"> <span>2005</span></h2>
+                                                <p class="tm-figure-description">14 pets</p>
                                                 <a href="img/tm-img-11.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
@@ -467,8 +467,8 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-14-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Eight</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title"> <span>2006</span></h2>
+                                                <p class="tm-figure-description">12 pets</p>
                                                 <a href="img/tm-img-14.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
