--- a/index.html
+++ b/index.html
@@ -495,6 +495,56 @@
                                         <figure class="effect-bubba">
                                             <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Albert</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2008 – present</p>
+                                                <a href="img/tm-img-01.jpg">View more</a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/tm-img-02-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Bailey</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2011 – present</p>
+                                                <a href="img/tm-img-02.jpg">View more</a>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/tm-img-03-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Bumper</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2018 – present</p>
+                                                <a href="img/tm-img-03.jpg">View more</a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/tm-img-03-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Callie</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2018 – present</p>
+                                                <a href="img/tm-img-03.jpg">View more</a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/tm-img-04-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Sandy</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2007 – present</p>
+                                                <a href="img/tm-img-04.jpg">View more</a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div> 
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
                                                 <h2 class="tm-figure-title">Picture <span>One</span></h2>
                                                 <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
                                                 <a href="img/tm-img-01.jpg">View more</a>
