--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="cd-full-width">
                         <div class="container-fluid js-tm-page-content" data-page-no="1" data-page-type="gallery">
                             <div class="tm-img-gallery-container">
-                                <div class="tm-img-gallery gallery-one">
+                                <div class="tm-img-gallery">
                                 <!-- Gallery One pop up connected with JS code below --> 
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
@@ -84,7 +84,7 @@
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Albert</span></h2>
                                                 <p class="tm-figure-description text-lowercase">2008 – present</p>
-                                                <a href="img/tm-img-01.jpg">View more</a>
+                                                <a href="albert.html"></a>
                                             </figcaption>           
                                         </figure>
                                     </div>
