added pictures on albert's page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <!-- Gallery One pop up connected with JS code below --> 
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/icon.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Albert</span></h2>
                                                 <p class="tm-figure-description text-lowercase">2008 – present</p>
@@ -90,7 +90,7 @@
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-02-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/bailey-icon.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Bailey</span></h2>
                                                 <p class="tm-figure-description text-lowercase">2011 – present</p>
@@ -100,7 +100,7 @@
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-03-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/jake-icon.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Jake</span></h2>
                                                 <p class="tm-figure-description text-lowercase">2005 – 2015</p>
@@ -110,7 +110,7 @@
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-04-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/sandy-icon.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Sandy</span></h2>
                                                 <p class="tm-figure-description text-lowercase">2007 – present</p>
