--- a/albert.html
+++ b/albert.html
@@ -67,7 +67,7 @@
 
             <ul class="cd-hero-slider">
 
-<!-- BOOKMARK this is where the species categories are -->
+<!-- BOOKMARK: PHOTOS -->
                 <!-- Page 1 Gallery One -->
                 <li class="selected">                    
                     <div class="cd-full-width">
@@ -77,160 +77,67 @@
                                 <!-- Gallery One pop up connected with JS code below -->                                    
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/01.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <p class="tm-figure-description text-lowercase">2008</p>
-                                                <a href="img/tm-img-01.jpg">View more</a>
+                                                <p class="tm-figure-description">July 2008</p>
+                                                <a href="img/albert/01.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-02-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/02.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <p class="tm-figure-description text-lowercase">2011</p>
-                                                <a href="img/tm-img-02.jpg">View more</a>
+                                                <p class="tm-figure-description">September 2008</p>
+                                                <a href="img/albert/02.jpg">View more</a>
                                             </figcaption>
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-03-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/03.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <p class="tm-figure-description text-lowercase">2014</p>
-                                                <a href="img/tm-img-03.jpg">View more</a>
+                                                <p class="tm-figure-description">April 2010</p>
+                                                <a href="img/albert/03.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-04-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/04.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <p class="tm-figure-description text-lowercase">2018</p>
-                                                <a href="img/tm-img-04.jpg">View more</a>
-                                            </figcaption>           
+                                                <p class="tm-figure-description">August 2010</p>
+                                                <a href="img/albert/04.jpg">View more</a>
+                                            </figcaption>
                                         </figure>
-                                    </div>  
+                                    </div> 
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-05-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/05.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Five</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-05.jpg">View more</a>
+                                                <p class="tm-figure-description">December 2011</p>
+                                                <a href="img/albert/05.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-06-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/06.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Six</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-06.jpg">View more</a>
+                                                <p class="tm-figure-description">August 2012</p>
+                                                <a href="img/albert/06.jpg">View more</a>
                                             </figcaption>
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-07-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/albert/07.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Seven</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-07.jpg">View more</a>
+                                                <p class="tm-figure-description">July 2017</p>
+                                                <a href="img/albert/07.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-08-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Eight</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-08.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>   
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-09-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Nine</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-09.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-10-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Ten</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-10.jpg">View more</a>
-                                            </figcaption>
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Eleven</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-11.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-12-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Twelve</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-12.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-13-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Thirteen</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-13.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-14-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Fourteen</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-14.jpg">View more</a>
-                                            </figcaption>
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-15-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Fifteen</span></h2>
-                                                <p class="tm-figure-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                                <a href="img/tm-img-15.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-16-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Image <span>Sixteen</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-16.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>                                                                       
+                                    </div>                                                                      
                                 </div>                                 
                             </div>
                         </div>                                                    
