--- a/albert.html
+++ b/albert.html
@@ -44,16 +44,16 @@
                         <div class="collapse navbar-toggleable-md text-xs-center text-uppercase tm-navbar" id="tmNavbar">
                             <ul class="nav navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="1">Species <span class="sr-only">(current)</span></a>
-                                </li>                                
+                                    <a class="nav-link" href="#0" data-no="1">View All</a>
+                                </li>                              
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="2">Year</a>
+                                    <a class="nav-link" href="#0" data-no="2">Species</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="3">Current</a>
+                                    <a class="nav-link" href="#0" data-no="3">Year</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="4">View All</a>
+                                    <a class="nav-link" href="#0" data-no="4">Current</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#0" data-no="5">Stats</a>
