--- a/index.html
+++ b/index.html
@@ -783,8 +783,8 @@
                                     <div class="col-xs-12">
                                         <div class="tm-flex tm-contact-container">                                
                                             <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding tm-textbox-padding-contact">
-                                                <h2 class="tm-contact-info">title</h2>
-                                                <p class="tm-text">text</p>     
+                                                <h2 class="tm-contact-info">Total Number of Pets per Year</h2>
+                                                <img src="img/stats/total_per_year.png"></img>   
                                                 
                                             </div>
 
