updated stats page with new plot and links to data

--- a/index.html
+++ b/index.html
@@ -784,13 +784,19 @@
                                         <div class="tm-flex tm-contact-container">                                
                                             <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding tm-textbox-padding-contact">
                                                 <h2 class="tm-contact-info">Total Number of Pets per Year</h2>
-                                                <img src="img/stats/total_per_year.png"></img>   
+                                                <img src="img/stats/year_count.png"></img>
+                                                <p> </p>
+                                                <a href="https://docs.google.com/spreadsheets/d/1_CxN1SAa4S5aAF3ZHnXZ94ZeOva0I9_h__KjLxznLAI/edit?usp=sharing" target="_blank">Data</a>
+                                                <p class="tm-text">Max: 24 pets in 2012<br/>Average from 1999-2020: 16.91 pets</p>
                                                 
                                             </div>
 
                                             <div class="tm-bg-white-translucent text-xs-left tm-textbox tm-2-col-textbox-2 tm-textbox-padding tm-textbox-padding-contact">
-                                                <h2 class="tm-contact-info">title</h2>
-                                                <p class="tm-text">text</p>
+                                                <h2 class="tm-contact-info">Total Number of Pets per Species</h2>
+                                                <img src="img/stats/species_count.png"></img>
+                                                <p> </p>
+                                                <a href="https://docs.google.com/spreadsheets/d/1_CxN1SAa4S5aAF3ZHnXZ94ZeOva0I9_h__KjLxznLAI/edit#gid=1054132805?usp=sharing" target="_blank">Data</a>
+                                                <p class="tm-text">Max: 4 small mammals<br/>Average: 7.75 pets</p>
                                             </div>
 
                                         </div>
@@ -799,7 +805,9 @@
 
                                 </div>
 
-                            </div>    
+                            </div> 
+                            <p class="tm-text"><center>last updated january 2020<br/><a href="https://docs.google.com/spreadsheets/d/1_CxN1SAa4S5aAF3ZHnXZ94ZeOva0I9_h__KjLxznLAI/edit#gid=1054132805?usp=sharing" target="_blank" >Data</a></center></p>   
+
 
                         </div>
                         
