--- a/index.html
+++ b/index.html
@@ -257,121 +257,81 @@
                                 <!-- Gallery Two pop up connected with JS code below -->
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-12-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/perry.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title"> <span>Cats</span></h2>
-                                                <p class="tm-figure-description">10 pets</p>
+                                                <h2 class="tm-figure-title"> <span>Birds</span></h2>
+                                                <p class="tm-figure-description">5 pets</p>
                                                 <a href="img/tm-img-12.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/albert.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title"> <span>Dogs</span></h2>
-                                                <p class="tm-figure-description">5 pets</p>
+                                                <h2 class="tm-figure-title"> <span>Cats</span></h2>
+                                                <p class="tm-figure-description">11 pets</p>
                                                 <a href="img/tm-img-11.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-10-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/bailey.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title"> <span>Ferrets</span></h2>
-                                                <p class="tm-figure-description">4 pets</p>
+                                                <h2 class="tm-figure-title"> <span>Dogs</span></h2>
+                                                <p class="tm-figure-description">9 pets</p>
                                                 <a href="img/tm-img-10.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-09-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/nubbin.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title"> <span>Reptiles</span></h2>
-                                                <p class="tm-figure-description">12 pets</p>
+                                                <h2 class="tm-figure-title"> <span>Livestock</span></h2>
+                                                <p class="tm-figure-description">6 pets</p>
                                                 <a href="img/tm-img-09.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-08-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/syd.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Five</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
+                                                <h2 class="tm-figure-title"> <span>Lizards</span></h2>
+                                                <p class="tm-figure-description">5 pets</p>
                                                 <a href="img/tm-img-08.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-07-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/stompy.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Six</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title"> <span>Other</span></h2>
+                                                <p class="tm-figure-description">6 pets</p>
                                                 <a href="img/tm-img-07.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-06-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/dexter.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title">Small <span>Mammals</span></h2>
+                                                <p class="tm-figure-description">14 pets</p>
                                                 <a href="img/tm-img-06.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-05-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/edward.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Eight</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
+                                                <h2 class="tm-figure-title"> <span>Snakes</span></h2>
+                                                <p class="tm-figure-description">6 pets</p>
                                                 <a href="img/tm-img-05.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>  
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-04-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Nine</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-04.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>  
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-03-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Ten</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-03.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>  
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-02-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Eleven</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-02.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>  
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Twelve</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-01.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
@@ -806,7 +766,7 @@
                                 </div>
 
                             </div> 
-                            <p class="tm-text"><center>last updated january 2020<br/><a href="https://docs.google.com/spreadsheets/d/1_CxN1SAa4S5aAF3ZHnXZ94ZeOva0I9_h__KjLxznLAI/edit#gid=1054132805?usp=sharing" target="_blank" >Data</a></center></p>   
+                            <p class="tm-text"><center>last updated january 2020<br/><a href="https://docs.google.com/spreadsheets/d/1Qd274ON-9NbG1gsm4uglsc3slM4tMvPiUc_7oII3Osw/edit?usp=sharing" style=color:#0000EE; target="_blank" >Master Data Sheet</a></center></p>   
 
 
                         </div>
