the tiles on all of the primary pages are now accurate

--- a/index.html
+++ b/index.html
@@ -1056,134 +1056,136 @@
                                 <!-- Gallery Two pop up connected with JS code below -->
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/albert.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Albert</span></h2>
                                                 <p class="tm-figure-description text-lowercase">2008 – present</p>
-                                                <a href="img/tm-img-01.jpg">View more</a>
+                                                <a href="albert.html"></a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-02-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/bailey.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Bailey</span></h2>
-                                                <p class="tm-figure-description text-lowercase">2011 – present</p>
-                                                <a href="img/tm-img-02.jpg">View more</a>
-                                            </figcaption>
+                                                <p class="tm-figure-description text-lowercase">2010 – present</p>
+                                                <a href="albert.html"></a>
+                                            </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-03-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/bumper.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Bumper</span></h2>
                                                 <p class="tm-figure-description text-lowercase">2018 – present</p>
-                                                <a href="img/tm-img-03.jpg">View more</a>
+                                                <a href="albert.html"></a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-03-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/callie.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Callie</span></h2>
                                                 <p class="tm-figure-description text-lowercase">2018 – present</p>
-                                                <a href="img/tm-img-03.jpg">View more</a>
+                                                <a href="albert.html"></a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-04-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/calypso.JPG" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Calypso</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2018 – present</p>
+                                                <a href="albert.html"></a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/icons/einstein.JPG" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Einstein</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2008 – present</p>
+                                                <a href="albert.html"></a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/icons/leo.JPG" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Leo</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2012 – present</p>
+                                                <a href="albert.html"></a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/icons/molly.JPG" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Molly</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2015 – present</p>
+                                                <a href="albert.html"></a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/icons/oreo.JPG" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Oreo</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2004 – present</p>
+                                                <a href="albert.html"></a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/icons/peanut.JPG" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Peanut</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2016 – present</p>
+                                                <a href="albert.html"></a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/icons/rutherford.JPG" alt="Image" class="img-fluid tm-img">
+                                            <figcaption>
+                                                <h2 class="tm-figure-title"> <span>Rutherford</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2010 – present</p>
+                                                <a href="albert.html"></a>
+                                            </figcaption>           
+                                        </figure>
+                                    </div>
+                                    <div class="grid-item">
+                                        <figure class="effect-bubba">
+                                            <img src="img/icons/sandy.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title"> <span>Sandy</span></h2>
-                                                <p class="tm-figure-description text-lowercase">2007 – present</p>
-                                                <a href="img/tm-img-04.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div> 
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-01-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>One</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/tm-img-01.jpg">View more</a>
+                                                <p class="tm-figure-description text-lowercase">2008 – present</p>
+                                                <a href="albert.html"></a>
                                             </figcaption>           
                                         </figure>
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-06-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/icons/syd.JPG" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Two</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-06.jpg">View more</a>
+                                                <h2 class="tm-figure-title"> <span>Syd</span></h2>
+                                                <p class="tm-figure-description text-lowercase">2009 – present</p>
+                                                <a href="albert.html"></a>
                                             </figcaption>           
                                         </figure>
                                     </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-13-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Three</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/tm-img-13.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-12-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Four</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-12.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-05-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Five</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/tm-img-05.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-09-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Six</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-09.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-11-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Seven</span></h2>
-                                                <p class="tm-figure-description">Suspendisse id placerat risus. Mauris quis luctus risus.</p>
-                                                <a href="img/tm-img-11.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>
-                                    <div class="grid-item">
-                                        <figure class="effect-bubba">
-                                            <img src="img/tm-img-14-tn.jpg" alt="Image" class="img-fluid tm-img">
-                                            <figcaption>
-                                                <h2 class="tm-figure-title">Picture <span>Eight</span></h2>
-                                                <p class="tm-figure-description">Maecenas purus sem, lobortis id odio in sapien.</p>
-                                                <a href="img/tm-img-14.jpg">View more</a>
-                                            </figcaption>           
-                                        </figure>
-                                    </div>                                                                                                 
+                                    
+
                                 </div>                                 
                             </div> <!-- .tm-img-gallery-container -->
                         </div>         
@@ -1217,7 +1219,7 @@
                                                 <img src="img/stats/species_count.png"></img>
                                                 <p> </p>
                                                 <a href="https://docs.google.com/spreadsheets/d/1_CxN1SAa4S5aAF3ZHnXZ94ZeOva0I9_h__KjLxznLAI/edit#gid=1054132805?usp=sharing" target="_blank">Data</a>
-                                                <p class="tm-text">Max: 4 small mammals<br/>Average: 7.75 pets</p>
+                                                <p class="tm-text">Max: 14 small mammals<br/>Average: 7.75 pets</p>
                                             </div>
 
                                         </div>
@@ -1227,7 +1229,7 @@
                                 </div>
 
                             </div> 
-                            <p class="tm-text"><center>last updated january 2020<br/><a href="https://docs.google.com/spreadsheets/d/1Qd274ON-9NbG1gsm4uglsc3slM4tMvPiUc_7oII3Osw/edit?usp=sharing" style=color:#0000EE; target="_blank" >Master Data Sheet</a></center></p>   
+                            <p class="tm-text"><center>created january 2020<br/>last updated january 2020<br/><a href="https://docs.google.com/spreadsheets/d/1Qd274ON-9NbG1gsm4uglsc3slM4tMvPiUc_7oII3Osw/edit?usp=sharing" style=color:#0000EE; target="_blank" >Master Data Sheet</a></center></p>   
 
 
                         </div>
